# knowledge-graph

./: README.md  prompts.toml  pyproject.toml
knowledge_graph/: main.py
knowledge_graph/backend/: create_graph.py  create_ontology.py  create_subgraphs.py  model.py  qna_service.py  read_graph.py
knowledge_graph/configuration/: config.py  toml_support.py
knowledge_graph/frontend/: main_cli.py  text_finder.py
knowledge_graph/services/: check_input.py  vector_db.py
