[tool.poetry]
name = "knowledge-graph"
version = "0.1.0"
description = ""
authors = ["SayaleeDamle <sayalee.damle@onepointltd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.0.352"
openai = "^1.6.0"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
tomli = "^2.0.1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
tiktoken = "^0.5.2"
lancedb = "^0.4.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
